# core_django

./: README.md  pyproject.toml
core/: settings.py  urls.py
core/apps/engine/: apps.py  models.py  serializers.py  urls.py  views.py
core/apps/engine/core/pattern/: singleton.py
core/apps/engine/core/pusher/: pusher_client.py
core/apps/engine/migrations/: 0001_initial.py
core/apps/engine/models_container/: __init__.py  enum_type.py  user.py
core/apps/engine/routers/: __init__.py  user.py
core/apps/engine/serializers_container/: __init__.py  token.py  user.py
core/apps/engine/utils/: constant.py  exception.py  utils.py
core/apps/engine/views_container/: __init__.py  user.py
