[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Datbe2001 <datbe26092001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
djangorestframework-simplejwt = "^5.3.1"
django-rest-swagger = "^2.2.0"
pyyaml = "^6.0.1"
django = "4.2.7"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
pusher = "3.3.0"
web3 = "^6.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
